# mini-etl

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
mini_etl/: __init__.py  cli.py
mini_etl/components/: __init__.py  extractors.py  loaders.py  transformers.py
mini_etl/core/: __init__.py  base.py  config.py  dag.py  parallel.py  pipeline.py  retry.py  scheduler.py  schema.py
mini_etl/ui/: __init__.py  app.py  components.py  styles.py
tests/: conftest.py  test_cli.py  test_config.py  test_extractors.py  test_loaders.py  test_pipeline.py  test_transformers.py
